--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 ---
 name: Padre-Plugin-PerlCritic
-version: 0.01
+version: 0.02
 author:
   - 'Kaare Rasmussen <kaare@cpan.org>'
-abstract: Format perl files using Perl::Critic
+abstract: Analyze perl files with Perl::Critic
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
@@ -16,7 +16,7 @@ build_requires:
 provides:
   Padre::Plugin::PerlCritic:
     file: lib/Padre/Plugin/PerlCritic.pm
-    version: 0.01
+    version: 0.02
 generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
