--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,28 @@
 ---
-name: Padre-Plugin-PerlCritic
-version: 0.06
+abstract: 'Analyze perl files with Perl::Critic'
 author:
   - 'Kaare Rasmussen <kaare@cpan.org>'
-abstract: Analyze perl files with Perl::Critic
+build_requires:
+  ExtUtils::MakeMaker: 6.42
+  Test::More: 0.47
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
+distribution_type: module
+generated_by: 'Module::Install version 0.91'
 license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Padre-Plugin-PerlCritic
+no_index:
+  directory:
+    - inc
+    - share
+    - t
+requires:
+  Padre: 0.54
+  Perl::Critic: 0
+  perl: 5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-requires:
-  Padre: 0.26
-  Perl::Critic: 0
-  perl: 5.008
-build_requires:
-  Test::More: 0.47
-provides:
-  Padre::Plugin::PerlCritic:
-    file: lib/Padre/Plugin/PerlCritic.pm
-    version: 0.06
-generated_by: Module::Build version 0.280801
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+version: 0.07
