Import of AZAWAWI/Padre-Plugin-PerlCritic-0.10 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-PerlCritic
gitpan-cpan-version:      0.10
gitpan-cpan-path:         AZAWAWI/Padre-Plugin-PerlCritic-0.10.tar.gz
gitpan-cpan-author:       AZAWAWI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -22,7 +22,7 @@ requires:
 resources:
   homepage: http://padre.perlide.org
   repository: http://svn.perlide.org/padre/trunk/Padre-Plugin-PerlCritic/
-version: 0.09
+version: 0.10
 x_Dist_Zilla:
   plugins:
     -
@@ -89,6 +89,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::CompileTests
       name: Dist::Zilla::PluginBundle::PadrePlugin/Dist::Zilla::Plugin::CompileTests
       version: 1.101800
+    -
+      class: Dist::Zilla::Plugin::LoadTests
+      name: Dist::Zilla::PluginBundle::PadrePlugin/Dist::Zilla::Plugin::LoadTests
+      version: 0.03
     -
       class: Dist::Zilla::Plugin::EOLTests
       name: Dist::Zilla::PluginBundle::PadrePlugin/Dist::Zilla::Plugin::EOLTests
